# CPP_babel_2019

./: .gitignore  CMakeLists.txt  README.md  audio_bin  build.bat  build.sh  client_bin  conanfile.txt  db.sqlite  kaka.sqlite  recorded.raw  server_bin  setup.sh
doc/: BinaryProtocol.md
srcs/: ADataTransfer.cpp  ADataTransfer.hpp  Audio.cpp  Audio.hpp  Babel.cpp  Babel.hpp  Request.hpp  main.cpp  socket_main.cpp
srcs/audio/: ADataTransfer.hpp  Audio.cpp  Audio.hpp  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp  main.cpp
srcs/client/: AudioModule.cpp  AudioModule.hpp  Client.cpp  Client.hpp  Client_call.cpp  Client_exception.hpp  Client_friend.cpp  main.cpp
srcs/common/: Args.hpp  Request.hpp
srcs/gui/: CallRequest.qml  Chat.qml  ChatPane.qml  ContactModel.qml  ContactsColumn.qml  HeaderBar.qml  HomePage.qml  HomeTopArea.qml  LoginPage.qml  MessageModel.qml  Profile.qml  Settings.qml  Theme.qml  main.qml  qml.qrc  qtquickcontrols2.conf
srcs/gui/CPP/: Call.cpp  Call.hpp  Chat.cpp  Chat.hpp  Contacts.cpp  Contacts.hpp  Engine.cpp  Engine.hpp  Login.cpp  Login.hpp  Messager.cpp  Messager.hpp  Network.cpp  Network.hpp  Profil.cpp  Profil.hpp  Settings.cpp  Settings.hpp  Worker.cpp  Worker.hpp  logger.cpp  logger.hpp  main.cpp
srcs/gui/Components/: Button.qml  ErrPopUp.qml  Text.qml
srcs/network/: Socket.cpp  Socket.hpp  SocketException.hpp
srcs/server/: Client.cpp  Client.hpp  Request.hpp  Server.cpp  Server.hpp  broadcast.hpp  main.cpp
srcs/server/sql/: Connector.cpp  Connector.hpp  Database.hpp
